--- a/app/src/main/res/layout/add_more_row.xml
+++ b/app/src/main/res/layout/add_more_row.xml
@@ -54,6 +54,7 @@
         android:layout_marginRight="@dimen/_5dp"
         android:background="@drawable/round_boder"
         android:padding="@dimen/_12dp"
+        android:inputType="textEmailAddress"
         android:textSize="@dimen/_12dp" />
 
     <TextView
@@ -72,6 +73,7 @@
         android:layout_marginLeft="@dimen/_5dp"
         android:layout_marginRight="@dimen/_5dp"
         android:background="@drawable/round_boder"
+        android:inputType="number"
         android:padding="@dimen/_12dp"
         android:textSize="@dimen/_12dp" />
 
