--- a/app/src/main/res/layout/fragment_add_tournament.xml
+++ b/app/src/main/res/layout/fragment_add_tournament.xml
@@ -71,6 +71,7 @@
                 android:layout_marginLeft="@dimen/_5dp"
                 android:layout_marginRight="@dimen/_5dp"
                 android:background="@drawable/round_boder"
+                android:inputType="number"
                 android:padding="@dimen/_12dp"
                 android:textSize="@dimen/_12dp" />
 
@@ -229,8 +230,8 @@
                             android:layout_marginLeft="@dimen/_5dp"
                             android:layout_marginRight="@dimen/_5dp"
                             android:background="@drawable/round_boder"
-                            android:padding="@dimen/_12dp"
                             android:inputType="number"
+                            android:padding="@dimen/_12dp"
                             android:textSize="@dimen/_12dp" />
 
 
@@ -251,9 +252,9 @@
                         <Spinner
                             android:id="@+id/formateSpinner"
                             android:layout_width="match_parent"
-                            android:entries="@array/matchtype"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
+                            android:entries="@array/matchtype"
                             android:gravity="center" />
 
 
@@ -301,57 +302,120 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="@dimen/_40dp"
-                    android:layout_marginLeft="@dimen/_12dp"
-                    android:layout_marginTop="@dimen/_12dp"
-                    android:layout_marginRight="@dimen/_12dp"
-                    android:orientation="horizontal">
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_5dp"
+                    android:orientation="vertical">
 
 
                     <LinearLayout
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_gravity="center"
-                        android:layout_marginRight="@dimen/_5dp"
-                        android:layout_weight="1"
-                        android:background="@drawable/edittextround"
-                        android:gravity="center"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
                         android:orientation="horizontal">
 
 
-                        <Spinner
-                            android:id="@+id/startdateSpinner"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:entries="@array/state"
-                            android:gravity="center" />
+                        <LinearLayout
+                            android:layout_width="0dp"
+                            android:layout_height="@dimen/_40dp"
+                            android:layout_margin="@dimen/_5dp"
+                            android:layout_weight="1"
+                            android:background="@drawable/edittextround"
+                            android:orientation="horizontal">
 
+
+                            <TextView
+                                android:id="@+id/startdateTxt"
+                                android:layout_width="0dp"
+                                android:layout_height="match_parent"
+                                android:layout_weight="1"
+                                android:backgroundTint="@color/white"
+                                android:hint="Start Date"
+                                android:padding="@dimen/_10dp"
+                                android:textSize="@dimen/_12dp" />
+
+                            <LinearLayout
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center"
+                                android:gravity="center">
+
+                                <View
+                                    android:layout_width="@dimen/_1dp"
+                                    android:layout_height="match_parent"
+                                    android:layout_gravity="center"
+                                    android:background="@color/darkBlack_color"
+                                    android:backgroundTint="@color/darkBlack_color"
+                                    android:padding="@dimen/_3dp" />
+
+
+                                <ImageView
+                                    android:id="@+id/startdateIcon"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_gravity="center"
+                                    android:layout_marginRight="@dimen/_5dp"
+                                    android:padding="@dimen/_5dp"
+                                    android:src="@drawable/ic_calendar" />
+
+                            </LinearLayout>
+
+
+                        </LinearLayout>
+
+
+                        <LinearLayout
+                            android:layout_width="0dp"
+                            android:layout_height="@dimen/_40dp"
+                            android:layout_margin="@dimen/_5dp"
+                            android:layout_weight="1"
+                            android:background="@drawable/edittextround"
+                            android:orientation="horizontal">
+
+
+                            <TextView
+                                android:id="@+id/enddateTxt"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:layout_weight="1"
+                                android:backgroundTint="@color/white"
+                                android:hint="End Date"
+                                android:padding="@dimen/_10dp"
+                                android:textSize="@dimen/_12dp" />
+
+                            <LinearLayout
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center"
+                                android:gravity="center">
+
+                                <View
+                                    android:layout_width="@dimen/_1dp"
+                                    android:layout_height="match_parent"
+                                    android:layout_gravity="center"
+                                    android:background="@color/darkBlack_color"
+                                    android:backgroundTint="@color/darkBlack_color"
+                                    android:padding="@dimen/_3dp" />
+
+
+                                <ImageView
+                                    android:id="@+id/enddateIcon"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_gravity="center"
+                                    android:layout_marginRight="@dimen/_5dp"
+                                    android:padding="@dimen/_5dp"
+                                    android:src="@drawable/ic_calendar" />
+
+                            </LinearLayout>
+
+
+                        </LinearLayout>
 
                     </LinearLayout>
 
 
-                    <LinearLayout
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_gravity="center"
-                        android:layout_marginLeft="@dimen/_5dp"
-                        android:layout_weight="1"
-                        android:background="@drawable/edittextround"
-                        android:gravity="center"
-                        android:orientation="horizontal">
 
 
-                        <Spinner
-                            android:id="@+id/enddateSpinner"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:entries="@array/state"
-                            android:gravity="center" />
 
-
-                    </LinearLayout>
 
                 </LinearLayout>
 
@@ -419,8 +483,8 @@
                             android:layout_marginLeft="@dimen/_5dp"
                             android:layout_marginRight="@dimen/_5dp"
                             android:background="@drawable/round_boder"
-                            android:padding="@dimen/_12dp"
                             android:inputType="number"
+                            android:padding="@dimen/_12dp"
                             android:textSize="@dimen/_12dp" />
 
 
@@ -442,8 +506,8 @@
                             android:id="@+id/statusSpinner"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:entries="@array/status"
                             android:layout_gravity="center"
+                            android:entries="@array/status"
                             android:gravity="center" />
 
 
@@ -589,6 +653,45 @@
                 android:orientation="vertical"
                 android:padding="@dimen/_5dp" />
 
+            <LinearLayout
+                android:id="@+id/addTeameLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/_5dp"
+                    android:layout_weight=".6"
+                    android:padding="@dimen/_5dp"
+                    android:text="Add Team"
+                    android:textSize="@dimen/_12dp"
+                    android:textStyle="bold" />
+
+
+                <TextView
+                    android:id="@+id/addTeame"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/_5dp"
+                    android:layout_weight=".4"
+                    android:gravity="right"
+                    android:padding="@dimen/_5dp"
+                    android:text="+ Select Team"
+                    android:textColor="@color/orange"
+                    android:textSize="@dimen/_12dp"
+                    android:textStyle="bold" />
+
+            </LinearLayout>
+
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/teamList"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_5dp" />
+
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -622,12 +725,13 @@
             </LinearLayout>
 
 
-            <android.support.v7.widget.RecyclerView
+            <ImageView
                 android:id="@+id/addImageView"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:background="@color/white" />
+                android:layout_margin="@dimen/_5dp"
+                android:background="@color/white"
+                android:src="@drawable/noimage" />
 
 
         </LinearLayout>
