--- a/app/src/main/res/layout/fragment_ground.xml
+++ b/app/src/main/res/layout/fragment_ground.xml
@@ -51,28 +51,28 @@
             android:layout_margin="@dimen/_5dp"
             android:layout_weight=".7"
             android:padding="@dimen/_5dp"
-            android:textColor="@color/black"
             android:text="TOP GROUND"
+            android:textColor="@color/black"
             android:textSize="@dimen/_14dp" />
 
 
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight=".4"
             android:layout_gravity="center"
-            android:gravity="center"
             android:layout_marginRight="5dp"
+            android:layout_weight=".4"
+            android:gravity="center"
             android:orientation="horizontal">
 
             <com.kredivation.aakhale.components.ASTFontTextIconView
                 android:id="@+id/sortBy"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="SORT BY "
                 android:layout_gravity="center_vertical"
-                android:textAlignment="center"
                 android:layout_weight="1"
+                android:text="SORT BY "
+                android:textAlignment="center"
                 android:textColor="@color/orange"
                 android:textSize="@dimen/_12dp" />
 
@@ -81,9 +81,9 @@
                 android:layout_width="@dimen/_30dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
+                android:layout_marginRight="@dimen/_4dp"
                 android:src="@drawable/ic_down_arrow"
                 android:textColor="@color/orange"
-                android:layout_marginRight="@dimen/_4dp"
                 android:textSize="@dimen/_12dp" />
 
         </LinearLayout>
@@ -97,12 +97,18 @@
         android:gravity="center"
         android:orientation="vertical">
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/rvList"
+        <android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@+id/swipe_container"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:dividerHeight="1dp" />
+            android:layout_weight="1">
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/rvList"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:dividerHeight="1dp" />
+        </android.support.v4.widget.SwipeRefreshLayout>
 
         <ProgressBar
             android:id="@+id/loaddataProgress"
