--- a/app/src/main/res/layout/acadamic_item.xml
+++ b/app/src/main/res/layout/acadamic_item.xml
@@ -19,6 +19,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_gravity="center"
+            android:scaleType="fitXY"
             android:layout_weight=".2" />
 
         <LinearLayout
@@ -34,9 +35,15 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="@dimen/_3dp"
-                android:textSize="@dimen/_12dp"
+                android:textSize="@dimen/_14dp"
                 android:textStyle="bold" />
-
+            <TextView
+                android:id="@+id/userId"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/_3dp"
+                android:textSize="@dimen/_12dp"
+                />
 
             <TextView
                 android:id="@+id/address"
@@ -44,7 +51,7 @@
                 android:layout_height="wrap_content"
                 android:padding="@dimen/_3dp"
                 android:textSize="@dimen/_12dp"
-                android:textStyle="bold" />
+              />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -57,6 +64,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:visibility="gone"
                     android:textSize="@dimen/_12dp" />
 
                 <TextView
@@ -65,7 +73,8 @@
                     android:layout_height="wrap_content"
                     android:textColor="@color/orange"
                     android:textSize="@dimen/_12dp"
-                    android:textStyle="bold" />
+                    android:text=""
+                    />
 
 
             </LinearLayout>
