--- a/app/src/main/res/layout/fragment_acadamics_detail.xml
+++ b/app/src/main/res/layout/fragment_acadamics_detail.xml
@@ -17,79 +17,103 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <LinearLayout
+            <android.support.design.card.MaterialCardView xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/root_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                app:cardCornerRadius="@dimen/_5dp"
+                app:cardElevation="@dimen/_5dp"
+                app:cardUseCompatPadding="true">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:padding="@dimen/_5dp">
 
-                    <TextView
-                        android:id="@+id/name"
+                    <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:textStyle="bold" />
+                        android:orientation="horizontal">
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:orientation="vertical">
+
+                            <TextView
+                                android:id="@+id/name"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:textColor="@color/black"
+                                android:textSize="@dimen/_14dp"
+                                android:textStyle="bold" />
+
+
+                            <TextView
+                                android:id="@+id/ratingTxt"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="@dimen/_5dp"
+                                android:text="* * * * *"
+                                android:textColor="@color/orange"
+                                android:textSize="@dimen/_12dp"
+                                android:textStyle="bold" />
+                        </LinearLayout>
+
+
+                        <ImageView
+                            android:id="@+id/fab"
+                            android:layout_width="@dimen/_30dp"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:src="@drawable/ic_favorite" />
+
+
+                    </LinearLayout>
+
+                    <TextView
+                        android:id="@+id/address"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/_10dp"
+                        android:textColor="@color/black"
+                        android:textSize="@dimen/_12dp" />
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/_1dp"
+                        android:layout_margin="@dimen/_5dp"
+                        android:background="@color/black" />
 
 
                     <TextView
-                        android:id="@+id/ratingTxt"
+                        android:id="@+id/uniqueId"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="* * * * *"
-                        android:textColor="@color/orange"
-                        android:textSize="@dimen/_12dp"
-                        android:textStyle="bold" />
+                        android:layout_marginTop="@dimen/_5dp"
+                        android:text="Unique ID: 898765F"
+                        android:textColor="@color/text_color"
+                        android:textSize="@dimen/_12dp" />
+
+                    <TextView
+                        android:id="@+id/establishText"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/_5dp"
+                        android:textColor="@color/text_color"
+                        android:textSize="@dimen/_12dp" />
+
+                    <TextView
+                        android:id="@+id/description"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/_5dp"
+                        android:textColor="@color/text_color"
+                        android:textSize="@dimen/_12dp" />
                 </LinearLayout>
-
-
-                <ImageView
-                    android:id="@+id/fab"
-                    android:layout_width="@dimen/_30dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:src="@drawable/ic_favorite" />
-
-
-            </LinearLayout>
-
-            <TextView
-                android:id="@+id/address"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textColor="@color/black"
-                android:textSize="@dimen/_12dp"
-                android:textStyle="bold" />
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/_1dp"
-                android:layout_margin="@dimen/_4dp"
-                android:background="@color/black" />
-
-
-            <TextView
-                android:id="@+id/uniqueId"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Unique ID: 898765F"
-                android:textColor="@color/text_color"
-                android:textSize="@dimen/_12dp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/establishText"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_4dp"
-                android:maxLines="5"
-                android:textColor="@color/text_color"
-                android:textSize="@dimen/_12dp"
-                android:textStyle="bold" />
-
+            </android.support.design.card.MaterialCardView>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -122,128 +146,183 @@
             </LinearLayout>
 
 
-            <TextView
+            <android.support.design.card.MaterialCardView xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_5dp"
-                android:text="Services(Sports)"
-                android:textColor="@color/black"
-                android:textSize="@dimen/_12dp"
-                android:textStyle="bold" />
-
-            <HorizontalScrollView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                app:cardCornerRadius="@dimen/_5dp"
+                app:cardElevation="@dimen/_5dp"
+                app:cardUseCompatPadding="true">
 
                 <LinearLayout
-                    android:id="@+id/sportsView"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal" />
-            </HorizontalScrollView>
+                    android:padding="@dimen/_5dp"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/_5dp"
+                        android:text="Services(Sports)"
+                        android:textColor="@color/black"
+                        android:textSize="@dimen/_12dp"
+                        android:textStyle="bold" />
 
 
-            <TextView
+                        <LinearLayout
+                            android:id="@+id/sportsView"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical" />
+
+                </LinearLayout>
+            </android.support.design.card.MaterialCardView>
+
+            <android.support.design.card.MaterialCardView xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_5dp"
-                android:text="Acadmics Member"
-                android:textColor="@color/orange"
-                android:textSize="@dimen/_12dp"
-                android:textStyle="bold" />
-
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_6dp"
-                android:orientation="vertical">
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Manager"
-                    android:textColor="@color/black"
-                    android:textSize="@dimen/_12dp"
-                    android:textStyle="bold" />
-
+                app:cardCornerRadius="@dimen/_5dp"
+                app:cardElevation="@dimen/_5dp"
+                app:cardUseCompatPadding="true">
 
                 <LinearLayout
-                    android:id="@+id/managerLayout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical" />
+                    android:padding="@dimen/_5dp"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Achievements"
+                        android:textColor="@color/black"
+                        android:textSize="@dimen/_12dp"
+                        android:textStyle="bold" />
 
 
-            </LinearLayout>
+                    <LinearLayout
+                        android:id="@+id/achievementsLayout"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical" />
+                </LinearLayout>
+            </android.support.design.card.MaterialCardView>
 
-
-            <LinearLayout
+            <android.support.design.card.MaterialCardView xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_6dp"
-                android:orientation="vertical">
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/_5dp"
-                    android:text="Coach"
-                    android:textColor="@color/black"
-                    android:textSize="@dimen/_12dp"
-                    android:textStyle="bold" />
-
+                app:cardCornerRadius="@dimen/_5dp"
+                app:cardElevation="@dimen/_5dp"
+                app:cardUseCompatPadding="true">
 
                 <LinearLayout
-                    android:id="@+id/coachLayout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical" />
+                    android:padding="@dimen/_5dp"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/_5dp"
+                        android:text="Acadmics Member"
+                        android:textColor="@color/orange"
+                        android:textSize="@dimen/_12dp"
+                        android:textStyle="bold" />
 
 
-            </LinearLayout>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/_6dp"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Manager"
+                            android:textColor="@color/black"
+                            android:textSize="@dimen/_12dp"
+                            android:textStyle="bold" />
 
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_6dp"
-                android:orientation="vertical">
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Owner"
-                    android:textColor="@color/black"
-                    android:textSize="@dimen/_12dp"
-                    android:textStyle="bold" />
+                        <LinearLayout
+                            android:id="@+id/managerLayout"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical" />
 
 
-                <LinearLayout
-                    android:id="@+id/ownerLayout"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical" />
+                    </LinearLayout>
 
 
-            </LinearLayout>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/_6dp"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="@dimen/_5dp"
+                            android:text="Coach"
+                            android:textColor="@color/black"
+                            android:textSize="@dimen/_12dp"
+                            android:textStyle="bold" />
 
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_5dp"
-                android:orientation="vertical">
-
-                <LinearLayout
-                    android:id="@+id/teamLiastView"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical" />
+                        <LinearLayout
+                            android:id="@+id/coachLayout"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical" />
 
 
-            </LinearLayout>
+                    </LinearLayout>
 
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/_6dp"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Owner"
+                            android:textColor="@color/black"
+                            android:textSize="@dimen/_12dp"
+                            android:textStyle="bold" />
+
+
+                        <LinearLayout
+                            android:id="@+id/ownerLayout"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical" />
+
+
+                    </LinearLayout>
+
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/_5dp"
+                        android:orientation="vertical">
+
+                        <LinearLayout
+                            android:id="@+id/teamLiastView"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical" />
+
+
+                    </LinearLayout>
+                </LinearLayout>
+            </android.support.design.card.MaterialCardView>
         </LinearLayout>
     </android.support.v4.widget.NestedScrollView>
 
