--- a/app/src/main/res/layout/gallery_row.xml
+++ b/app/src/main/res/layout/gallery_row.xml
@@ -1,7 +1,7 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_width="@dimen/_150dp"
+    android:layout_height="@dimen/_200dp"
     android:layout_marginTop="5dp"
     android:orientation="vertical"
     android:layout_gravity="center"
@@ -14,7 +14,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_margin="@dimen/_5dp"
         android:src="@drawable/noimage" />
 
 
